# web-search

./: AGENTS.md  README.md  pyproject.toml
docs/: searxng-api.md
src/web_search/: cli.py  schemas.py  settings.py
src/web_search/formatting/: __init__.py  search.py
src/web_search/libs/searxng/: __init__.py  client.py  exceptions.py
src/web_search/services/search/: __init__.py  exceptions.py  service.py
tests/web_search/: test_cli_search.py
tests/web_search/formatting/: test_search.py
tests/web_search/libs/searxng/: test_schemas.py  test_searxng_client.py
tests/web_search/services/search/: test_service.py
